// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ObsidianLoFUninterpretedText given we have an uninterpreted text and it's placed left renders correctly 1`] = `
<span
  className="StyleObsidianLoFUninterpretedText"
  style={
    {
      "marginLeft": undefined,
    }
  }
>
  (Lorem ipsum dolor () sit amet, consectetur adipiscing elit.)
</span>
`;

exports[`ObsidianLoFUninterpretedText given we have an uninterpreted text and it's placed right renders correctly 1`] = `
<span
  className="StyleObsidianLoFUninterpretedText"
  style={
    {
      "marginLeft": "auto",
    }
  }
>
  (Lorem ipsum dolor () sit amet, consectetur adipiscing elit.)
</span>
`;
